# northbound-mutual-fund-aum-tracker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: northbound-aum-tracker.yml
config/: manager_sources.json
data/: northbound_mutual_funds_20260427.json
outputs/: latest.csv  latest.json  latest.xlsx  northbound_aum_2026-04-29.csv  northbound_aum_2026-04-29.json  northbound_aum_2026-04-29.xlsx  northbound_aum_2026-05-04.csv  northbound_aum_2026-05-04.json  northbound_aum_2026-05-04.xlsx  northbound_aum_2026-05-11.csv  northbound_aum_2026-05-11.json  northbound_aum_2026-05-11.xlsx  northbound_aum_2026-05-18.csv  northbound_aum_2026-05-18.json  northbound_aum_2026-05-18.xlsx  northbound_aum_2026-05-25.csv  northbound_aum_2026-05-25.json  northbound_aum_2026-05-25.xlsx  northbound_aum_2026-06-01.csv  northbound_aum_2026-06-01.json  northbound_aum_2026-06-01.xlsx  northbound_aum_2026-06-08.csv  northbound_aum_2026-06-08.json  northbound_aum_2026-06-08.xlsx  northbound_aum_2026-06-15.json  northbound_aum_2026-06-15.xlsx  northbound_aum_2026-06-22.json  northbound_aum_2026-06-22.xlsx  northbound_aum_2026-06-29.json  northbound_aum_2026-06-29.xlsx  northbound_aum_2026-07-06.json  northbound_aum_2026-07-06.xlsx  northbound_aum_2026-07-13.csv  northbound_aum_2026-07-13.json  northbound_aum_2026-07-13.xlsx  northbound_aum_2026-07-20.csv  northbound_aum_2026-07-20.json  northbound_aum_2026-07-20.xlsx
src/northbound_fund_aum_tracker/: cli.py  (+10 more)
tests/: test_adapters.py  test_extract.py  test_fetch.py  test_funds.py  test_report.py  test_sources.py  test_tracker.py
