[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "northbound-mutual-fund-aum-tracker"
version = "0.1.0"
description = "Track northbound mutual recognition fund AUM from manager official websites and convert values to USD."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "openpyxl>=3.1",
  "pypdf>=4.0",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
northbound-aum-tracker = "northbound_fund_aum_tracker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
